--- a/plugin.xml
+++ b/plugin.xml
@@ -21,7 +21,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-plugin-appsflyer-sdk"
-        version="4.4.0">
+        version="4.4.0-nrgpatch">
     <name>AppsFlyer</name>
     <description>Cordova Plugin AppsFlyer</description>
     <license>Apache 2.0</license>
@@ -40,7 +40,7 @@
     </js-module>
 
 
-    
+
 
     <!-- android -->
     <platform name="android">
@@ -69,7 +69,7 @@
 
 
     <!-- ios -->
-    <platform name="ios">        
+    <platform name="ios">
         <config-file target="config.xml" parent="/*">
             <feature name="AppsFlyerPlugin">
                 <param name="ios-package" value="AppsFlyerPlugin" />
